<resources>

    <string name="facebook_app_id">2386837598291227</string>
    <string name="facebook_application_id">2386837598291227</string>
    <string name="fb_login_protocol_scheme">fb2386837598291227</string>

    <string name="app_name">Sobat Masjid</string>
    <string name="sobatmasjid">SobatMasjid</string>
    <string name="sponsor">sponsor</string>
    <string name="SplashScreenText">Didukung oleh:</string>
    <string name="intro_text_one">Aplikasi Sahabat Anda Dalam Memakmurkan Masjid</string>
    <string name="intro_text_two">Masjid Adalah Tempat yang Paling Allah Cintai di Muka Bumi</string>
    <string name="intro_text_three">Dapatkan Informasi Resmi Masjid Secara Gamblang dan Menarik</string>
    <string name="login">Masuk</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="LoginText">Masuk ke akun kamu dengan</string>
    <string name="label">#sobatmesjid</string>
    <string name="research">Kajian</string>
    <string name="home">Beranda</string>
    <string name="mosque">Masjid</string>
    <string name="announcement">Pengumuman</string>
    <string name="profile">Profil</string>
    <string name="appBarTitle">sobatmasjid</string>
    <string name="dummyLocation">Lokasi Dummy</string>
    <string name="dummyMosqueName">Nama Masjid</string>
    <string name="dummyMosqueType">Jenis</string>
    <string name="dummyMosqueDistance">1500m</string>
    <string name="closestMosqueText">Masjid Terdekat</string>
    <string name="forList">Selengkapnya</string>
    <string name="divider">divider</string>
    <string name="dummyFullDate">Selasa, 26 Februari 2020</string>
    <string name="dummyResearchTime">16.00 – 18.00 WITA</string>
    <string name="dummyResearchCategory">Kategori</string>
    <string name="dummyMosqueClassification">Raya</string>
    <string name="recentResearch">Kajian Hangat</string>
    <string name="researchTitle">Judul Kajian</string>
    <string name="fridayPrayer">Info Jum\'atan</string>
    <string name="fridayPrayerDate">Tanggal Jum\'at</string>
    <string name="khatib">Khatib</string>
    <string name="muadzin">Muadzin</string>
    <string name="dots">:\n:</string>
    <string name="ustadzName">Nama Ustadz</string>
    <string name="creditText">Saldo</string>
    <string name="dummyCredit">Rp. 100.000.000</string>
    <string name="creditIn">Uang Masuk</string>
    <string name="creditOut">Uang Keluar</string>
    <string name="dummyTimePassed">1 jam lalu</string>
    <string name="mosqueQueryHintSearch">Cari masjid yang mau dimakmurkan …</string>
    <string name="researchQueryHintSearch">Cari kajian yang mau diikuti …</string>
    <string name="actionbar_infaq">Berinfaq</string>
    <string name="actionbar_follow">Ikuti</string>
    <string name="actionbar_visit">Kunjungi</string>
    <string name="erectDateText">Tanggal Berdiri</string>
    <string name="emailText">Email</string>
    <string name="addressText">Alamat</string>
    <string name="dummyErectDate">5 Desember 1987</string>
    <string name="dummyEmail">emailmasjid@gmail.com</string>
    <string name="dummyAddress">Jl. Sekumpul Martapura Kelurahan Guntung Paikat</string>
    <string name="loremIpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dateDayMonth">08 Jun</string>
    <string name="imam">Imam</string>
    <string name="finance">Keuangan</string>
    <string name="fridayOfficer">Petugas Jum\'at</string>
    <string name="greetingOpener">Bissmillahirrahmanirrahim</string>
    <string name="greetingMosqueFollow">Selamat data di Sobat Masjid. Ikuti Masjid untuk melihat informasi yang mereka bagikan.</string>
    <string name="dummyNotification">You have received an invitation to interview for the job UI/UX Designer for Whisk Samsung NEXT</string>
    <string name="notification">Notifikasi</string>
    <string name="adhan">Waktu Shalat</string>
    <string name="arabCalendar">13 Dzulhijjah 1441</string>
    <string name="dummyAdhanLabel">Subuh</string>
    <string name="filter">Filter Klasifikasi Masjid</string>
    <string name="dummyGender">Laki-laki</string>
    <string name="note">Catatan :</string>
    <string name="register">Hadir</string>
    <string name="follow">Ikuti</string>
    <string name="following">Mengikuti</string>
    <string name="followQueryHint">Cari yang diikuti …</string>
    <string name="statusProfile">Lengkapi Profil</string>
    <string name="dummyPercentageValue">50%</string>
    <string name="akun">Akun</string>
    <string name="mosqueRegisterHelping">Bantu daftarkan Masjid</string>
    <string name="rating">Beri rating untuk aplikasi</string>
    <string name="supportBy">Didukung oleh</string>
    <string name="change">Ubah</string>
    <string name="cancel">Batal</string>
    <string name="fullName">Nama Lengkap</string>
    <string name="bornDate">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="motto">Motto Hidup</string>
    <string name="hypen">-</string>
    <string name="profileClaim">Informasi berikut hanya dapat dilihat oleh sobat, kami tidak akan mempublikasikan.</string>
    <string name="save">Simpan</string>
    <string name="all">Semua</string>
    <string name="notification_warning">"Terjadi kesalahan"</string>

    <array name="mosque_type">
        <item>Semua</item>
        <item>Masjid</item>
        <item>Musholla</item>
    </array>

    <array name="research_type">
        <item>Semua</item>
        <item>Umum</item>
        <item>Ikhwan</item>
        <item>Akhwat</item>
    </array>

    <array name="announcement_category">
        <item>Semua</item>
        <item>Barang Hilang</item>
        <item>Kegiatan</item>
    </array>

    <array name="mosque_classification">
        <item>Negara</item>
        <item>Akbar</item>
        <item>Raya</item>
        <item>Agung</item>
        <item>Besar</item>
        <item>Jami</item>
        <item>Biasa</item>
        <item>Bersejarah</item>
    </array>

    <string name="backButton">backButton</string>
    <string name="action_bar_followed">Diikuti</string>
    <string name="qris">QRIS</string>
    <string name="bank_name">Nama Bank</string>
    <string name="owner_name">Nama Pemilik</string>
    <string name="account_number">No. Rekening</string>
    <string name="followed">Diikuti</string>
    <string name="attended">Dihadiri</string>
    <string name="imsak">Imsak</string>
    <string name="subuh">Subuh</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isya</string>
    <string name="logout">Keluar</string>

    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
</resources>