<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/globalPadding"
    android:paddingStart="@dimen/globalPadding"
    android:paddingEnd="@dimen/globalPadding"
    tools:viewBindingIgnore="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/ustadzPhoto"
        android:layout_width="80dp"
        android:layout_height="105dp"
        app:cardCornerRadius="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/colorAccent"/>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/tvResearchCategory"
        android:layout_alignStart="@id/tvResearchCategory"
        android:layout_alignTop="@id/tvResearchCategory"
        android:layout_alignBottom="@id/tvResearchCategory"
        android:background="@drawable/btn_round_fill"/>

    <TextView
        android:id="@+id/tvResearchCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummyResearchCategory"
        android:textSize="@dimen/smallText"
        android:fontFamily="@font/rubik"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:paddingStart="@dimen/smallPadding"
        android:paddingEnd="@dimen/smallPadding"
        android:paddingTop="@dimen/verySmallPadding"
        android:paddingBottom="@dimen/verySmallPadding"
        android:layout_marginTop="@dimen/smallPadding"
        android:layout_marginEnd="@dimen/globalPadding"/>

    <TextView
        android:id="@+id/tvResearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/researchTitle"
        android:lines="1"
        android:ellipsize="end"
        android:layout_toEndOf="@id/ustadzPhoto"
        android:layout_alignTop="@id/ustadzPhoto"
        android:layout_toStartOf="@id/tvResearchCategory"
        android:paddingTop="@dimen/verySmallPadding"
        android:paddingStart="@dimen/globalPadding"
        android:paddingEnd="@dimen/globalPadding"/>

    <TextView
        android:id="@+id/tvUstadzName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ustadzName"
        android:textSize="@dimen/subTitle"
        android:layout_toEndOf="@id/ustadzPhoto"
        android:layout_below="@id/tvResearchTitle"
        android:layout_marginTop="@dimen/globalPadding"
        android:paddingStart="@dimen/globalPadding"
        android:paddingEnd="@dimen/globalPadding"/>

    <TextView
        android:id="@+id/tvMosqueName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummyMosqueName"
        android:textSize="@dimen/smallText"
        android:layout_toEndOf="@id/ustadzPhoto"
        android:layout_below="@id/tvUstadzName"
        android:paddingStart="@dimen/globalPadding"
        android:paddingEnd="@dimen/globalPadding"
        android:drawablePadding="@dimen/verySmallPadding"
        app:drawableStartCompat="@drawable/ic_location_12dp" />

    <TextView
        android:id="@+id/tvResearchDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummyFullDate"
        android:textSize="@dimen/smallText"
        android:layout_toEndOf="@id/ustadzPhoto"
        android:layout_below="@id/tvMosqueName"
        android:paddingStart="@dimen/globalPadding"
        android:paddingEnd="@dimen/globalPadding"
        android:drawablePadding="@dimen/verySmallPadding"
        app:drawableStartCompat="@drawable/ic_calendar_12dp" />


    <TextView
        android:id="@+id/tvResearchTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummyResearchTime"
        android:textSize="@dimen/smallText"
        android:layout_toEndOf="@id/ustadzPhoto"
        android:layout_below="@id/tvResearchDate"
        android:paddingStart="@dimen/globalPadding"
        android:paddingEnd="@dimen/globalPadding"
        android:drawablePadding="@dimen/verySmallPadding"
        app:drawableStartCompat="@drawable/ic_time_12dp" />

    <ImageView
        android:visibility="gone"
        android:contentDescription="@string/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        android:layout_below="@id/ustadzPhoto"
        android:layout_marginTop="@dimen/globalMargin"/>

</RelativeLayout>