<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/box_item"
    android:layout_width="300dp"
    android:layout_height="210dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/colorPrimary" />

        <ImageView
            android:id="@+id/bottom_layer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:src="@color/white" />

        <TextView
            android:id="@+id/tvFridayPrayerDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/globalPadding"
            android:fontFamily="@font/rubik"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/fridayPrayerDate"
            android:textSize="@dimen/smallText" />

        <TextView
            android:id="@+id/tvMosqueName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFridayPrayerDate"
            android:layout_marginBottom="@dimen/verySmallPadding"
            android:fontFamily="@font/rubik"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/noPadding"
            android:text="@string/dummyMosqueName"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/bodyText" />

        <TextView
            android:id="@+id/tvKhatibText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMosqueName"
            android:drawablePadding="@dimen/verySmallPadding"
            android:fontFamily="@font/rubik"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/noPadding"
            android:text="@string/khatib"
            android:textColor="@color/colorAccent"
            app:drawableLeftCompat="@drawable/ic_dots" />

        <TextView
            android:id="@+id/tvMuadzinText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvKhatibText"
            android:drawablePadding="@dimen/verySmallPadding"
            android:fontFamily="@font/rubik"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/noPadding"
            android:text="@string/muadzin"
            android:textColor="@color/colorAccent"
            app:drawableLeftCompat="@drawable/ic_dots" />

        <TextView
            android:id="@+id/tvDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tvMuadzinText"
            android:layout_toEndOf="@id/tvMuadzinText"
            android:fontFamily="@font/rubik"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/noPadding"
            android:text="@string/dots"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tvKhatib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvKhatibText"
            android:layout_toEndOf="@id/tvDots"
            android:fontFamily="@font/rubik"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/noPadding"
            android:text="@string/ustadzName"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tvMuadzin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvMuadzinText"
            android:layout_toEndOf="@id/tvDots"
            android:fontFamily="@font/rubik"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/noPadding"
            android:text="@string/muadzin"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tvCreditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/bottom_layer"
            android:fontFamily="@font/rubik"
            android:paddingStart="@dimen/globalPadding"
            android:paddingTop="@dimen/itemMainMosqueTextTopPadding"
            android:paddingEnd="@dimen/noPadding"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/bodyText"
            tool:text="@string/creditText" />

        <TextView
            android:id="@+id/tvCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCreditText"
            android:ellipsize="end"
            android:fontFamily="@font/rubik"
            android:lines="1"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/globalPadding"
            android:text="@string/dummyCredit"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/bigTitle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCreditInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCredit"
            android:fontFamily="@font/rubik"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/noPadding"
            android:text="@string/creditIn"
            android:textSize="@dimen/smallText"
            android:textColor="@color/colorAccent"
            android:paddingTop="@dimen/smallPadding"/>

        <TextView
            android:id="@+id/tvCreditIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCreditInText"
            android:fontFamily="@font/rubik"
            android:paddingTop="@dimen/verySmallPadding"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/noPadding"
            android:text="@string/dummyCredit"
            android:textStyle="bold"
            android:textSize="@dimen/smallText"
            android:textColor="@color/colorAccent"/>


        <TextView
            android:id="@+id/tvCreditOutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCredit"
            android:layout_toEndOf="@id/tvCreditIn"
            android:fontFamily="@font/rubik"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/noPadding"
            android:text="@string/creditOut"
            android:textSize="@dimen/smallText"
            android:textColor="@color/colorAccent"
            android:paddingTop="@dimen/smallPadding"/>

        <TextView
            android:id="@+id/tvCreditOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCreditOutText"
            android:layout_toEndOf="@id/tvCreditIn"
            android:fontFamily="@font/rubik"
            android:paddingTop="@dimen/verySmallPadding"
            android:paddingStart="@dimen/globalPadding"
            android:paddingEnd="@dimen/noPadding"
            android:text="@string/dummyCredit"
            android:textStyle="bold"
            android:textSize="@dimen/smallText"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>